# todo-cli-rs

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2022-10-27-164213_todos/: up.sql
migrations/2022-10-27-175603_todos/: up.sql
src/: lib.rs  main.rs  schema.rs
src/db/: mod.rs
src/models/: cli.rs  entry.rs  mod.rs  status.rs
src/util/: mod.rs
