[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
dialoguer = "0.10.2"
diesel = { version = "2.0.0", features = ["mysql"] }
dotenvy = "0.15"
[features]
local_database = []
